--- a/PlatformService.csproj
+++ b/PlatformService.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Design" Version="5.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.InMemory" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
