--- a/.github/workflows/aspdotnetapi.yml
+++ b/.github/workflows/aspdotnetapi.yml
@@ -1,10 +1,6 @@
 # name: .NET
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+name: ASP.NET CORE CI
+on: [push]
 
 jobs:
   build:
@@ -19,7 +15,7 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
