--- a/.github/workflows/aspdotnetapi.yml
+++ b/.github/workflows/aspdotnetapi.yml
@@ -3,9 +3,12 @@ name: ASP.NET CORE CI
 on: [push]
 
 jobs:
-  build:
+  build-and-text:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+     matrix:
+      os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v2
