--- a/.github/workflows/aspdotnetapi.yml
+++ b/.github/workflows/aspdotnetapi.yml
@@ -1,6 +1,11 @@
 # name: .NET
 name: ASP.NET CORE CI
-on: [push]
+on: 
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  
 
 jobs:
   build-and-text:
