--- a/.github/workflows/aspdotnetapi.yml
+++ b/.github/workflows/aspdotnetapi.yml
@@ -5,25 +5,15 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  
-
 jobs:
-  build-and-test:
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-     matrix:
-      os: [ubuntu-latest, windows-latest, macOS-latest]
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
+      
